# cwcwm

./: .clang-format  .editorconfig  .gitignore  Makefile  README.md  cwc.desktop  meson.build  meson_options.txt
defconfig/: keybind.lua  oneshot.lua  rc.lua
docs/: 00-getting-started.md  30-custom-layout.md  80-c-plugin.md  config.ld  ldoc.ltp
include/cwc/: config.h  luac.h  luaclass.h  luaobject.h  plugin.h  server.h  signal.h  types.h  util.h
include/cwc/desktop/: idle.h  layer_shell.h  output.h  session_lock.h  toplevel.h
include/cwc/input/: cursor.h  keyboard.h  seat.h
include/cwc/layout/: bsp.h  container.h  master.h
include/private/: luac.h  server.h
lib/cuteful/: client.lua  enum.lua  init.lua  tag.lua
lib/gears/: color.lua  debug.lua  geometry.lua  init.lua  matcher.lua  matrix.lua  object.lua  shape.lua  surface.lua  wallpaper.lua
lib/gears/object/: properties.lua
lib/gears/sort/: topological.lua
lib/wibox/: hierarchy.lua  init.lua
lib/wibox/widget/: base.lua
plugins/: cwcle.c  flayout.c  meson.build
protocol/: meson.build
src/: config.c  luac.c  luaclass.c  luaobject.c  main.c  meson.build  plugin.c  server.c  signal.c  util-map.c  util.c
src/desktop/: idle.c  layer_shell.c  output.c  session_lock.c  toplevel.c
src/input/: cursor.c  keybinding.c  keyboard.c  seat.c
src/layout/: bsp.c  container.c  master.c
src/objects/: client.c  container.c  screen.c
tests/: hash.c  hash.cpp  meson.build  rc.lua
tests/capi/: signal.c  signal.lua
tests/luapi/: client.lua  container.lua  screen.lua  signal.lua
